--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@stripe/stripe-react-native": "0.50.3",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
-    "expo": "~54.0.25",
+    "expo": "~54.0.30",
+    "expo-auth-session": "~7.0.10",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
